--- a/src/app/banner/banner.component.scss
+++ b/src/app/banner/banner.component.scss
@@ -1,7 +1,7 @@
 .bannerComponent{
     padding-top: 140px;
     .bannerContainer{
-        padding: 20px 20px;
+        padding: 20px 20px 10px;
         img{
             border-radius: 15px !important;
         }
