--- a/src/app/top-category/top-category.component.html
+++ b/src/app/top-category/top-category.component.html
@@ -1,4 +1,4 @@
-<div class="topComponent">
+<div class="topComponent">  
     <div class="topContainer container-fluid py-5">
         <div class="row">
             <div class="col-12 d-flex justify-content-between px-5">
@@ -10,20 +10,25 @@
                 </div>
             </div>
         </div>
-        <div class="categoryContainer row mt-4 px-5 d-flex align-items-center">
-            <div class="leftslider col-1 text-start">
-                <i class="fa fa-arrow-left"></i>
+        <div  class="categoryContainer row mt-4 px-lg-5 px-xl-5 px-2 d-flex align-items-center slider slider-nav">
+            <div class="col-1 px-0 d-flex justify-content-end">
+                <a class="arrow-container leftslider col-12" (click)="toLeft()">
+                    <i class="fa fa-arrow-left"></i>
+                </a>
             </div>
-            <div class="list col-10 d-flex">
-                <div class="category col-2 mx-2" *ngFor="let data of topCategories">
+            
+            <div id="slider" class="list col-10 d-flex px-0">
+                <div class="category col-lg-3 col-xl-2 col-md-3 col-sm-4 col-xs-4 col-6  d-flex justify-content-center flex-column align-items-center" *ngFor="let data of topCategories">
                     <img src="{{data.imgurl}}"/>
                     <span class="mt-2 d-flex flex-column">{{data.name}}</span>
                 </div>
             </div>
-            <div class="rightslider col-1 text-end">
-                <i class="fa fa-arrow-right"></i>
+            
+            <div class="col-1 px-0">
+                <a class="arrow-container rightslider col-12" (click)="toNext()">
+                    <i class="fa fa-arrow-right"></i>
+                </a>
             </div>
         </div>
-
     </div>
 </div>
