--- a/src/app/top-category/top-category.component.scss
+++ b/src/app/top-category/top-category.component.scss
@@ -1,9 +1,13 @@
 .topComponent{
     .topContainer{
-
         .title{
             font-size: 30px;
         }
+
+        .list{
+            overflow: hidden;
+        }
+
         .category{
             img{
                 width: 100px;
@@ -11,7 +15,38 @@
             span{
                 font-size: 14px;
                 font-weight: 600;
+                text-transform: uppercase;
+                width: fit-content;
             }
         }
+
+        .arrow-container{
+            width: 50px;
+            height: 50px;
+            border: 1px solid;
+            border-radius: 50px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-decoration: none;
+            color: black;
+            .fa{
+                font-size: 20px;
+            }
+        }
+        .arrow-container:hover{
+            background-color: #eee;
+        }
     }
+
+    @media only screen and (max-width: 576px) {
+        .arrow-container{
+            width: 30px !important;
+            height: 30px !important;
+
+            .fa{
+                font-size: 14px !important;
+            }
+        }
+    } 
 }
