--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="footerComponent">
+<div class="footerComponent" *ngIf="!isLoading">
     <div class="footerContainer">
         <div class="banner container-fluid p-0">
            <div class="bannerContainer d-flex justify-content-center align-items-center py-4">
@@ -90,4 +90,20 @@
             <p>© 2021 A product of Square Bubbles Pvt. Ltd.</p>
         </div>
     </div>
+</div>
+<div class="footerComponent" *ngIf="isLoading">
+    <content-loader
+    viewBox="0 0 400 140"
+    backgroundColor="#f3f3f3"
+    foregroundColor="#ecebeb">
+    <svg:rect x="117" y="10" rx="3" ry="3" width="45" height="12" /> 
+    <svg:rect x="182" y="10" rx="3" ry="3" width="45" height="12" /> 
+    <svg:rect x="243" y="10" rx="3" ry="3" width="45" height="12" /> 
+    <svg:rect x="31" y="40" rx="0" ry="0" width="75" height="55" /> 
+    <svg:rect x="120" y="40" rx="0" ry="0" width="75" height="55" /> 
+    <svg:rect x="214" y="40" rx="0" ry="0" width="75" height="55" /> 
+    <svg:rect x="305" y="40" rx="0" ry="0" width="75" height="55" />
+    <svg:rect x="25" y="105" rx="3" ry="3" width="360" height="8" /> 
+    <svg:rect x="150" y="120" rx="3" ry="3" width="100" height="4" /> 
+    </content-loader>    
 </div>
