--- a/src/app/inventory/inventory.component.scss
+++ b/src/app/inventory/inventory.component.scss
@@ -2,44 +2,43 @@
     background-color: #f6f6f6;
     // padding: 0px;
     .inventoryContainer{
-        
-            .inventory-list{
+
+        .inventory-list{
+            background-color: white;
+            list-style: none;
+            padding-left: 0px;
+            position: sticky;
+            top: 140px;
+            li{
+                height: 70px;
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
+                padding-left: 10px;
                 background-color: white;
-                list-style: none;
-                padding-left: 0px;
-                position: sticky;
-                top: 140px;
-                li{
-                    height: 70px;
-                    display: flex;
-                    justify-content: flex-start;
-                    align-items: center;
-                    padding-left: 10px;
-                    background-color: white;
+            }
+            li.active{
+                background-color: #f7e4f3;
+            }
+            a{
+                text-decoration: none;
+                display: flex;
+                color: #000;
+            }
+            img{
+                width: 50px;
+                margin-right: 15px;
+            }
+            .media{
+                .title{
+                    text-transform: uppercase;
                 }
-                li.active{
-                    background-color: #f7e4f3;
-                }
-                a{
-                    text-decoration: none;
-                    display: flex;
-                    color: #000;
-                }
-                img{
-                    width: 50px;
-                    margin-right: 15px;
-                }
-                .media{
-                    .title{
-                        text-transform: uppercase;
-                    }
-                    .qty{
-                        color: #9b9b9b;
-                        font-size: 12px;
-                    }
+                .qty{
+                    color: #9b9b9b;
+                    font-size: 12px;
                 }
             }
-        
+        }
 
         .tabContainer{
 
@@ -85,6 +84,44 @@
                 }
             }
         }
+
+        .tabMobile{
+            display: none;
+            .listContainer{
+                width: 100%;
+                background-color: #f6f6f6 !important;
+            }
+
+            .inventory-list{
+                background-color: transparent !important;
+                line-height: 24px;
+                overflow-x: scroll;
+                li{
+                    border-radius: 50px;
+                    font-size: 14px;
+                    white-space: nowrap;
+                    margin-right: 10px;
+                    font-size: 14px;
+                    transform: scale(0.9);
+                }
+            }
+            .product-info{
+                font-size: 12px;
+                .product-name{
+                    font-size: 14px !important;
+                }
+                .fa{
+                    margin-right: 5px;
+                    color: darkorange;
+                }
+                .price{
+                    span{
+                        text-decoration: line-through;
+                        margin-right: 5px;
+                    }
+                }
+            }
+        }
     }
 
     .selectedTab{
@@ -92,4 +129,19 @@
         padding-top: 140px !important;
     }
 
+}
+
+@media only screen and (max-width: 992px){
+    .inventory-list{
+        top : 170px !important;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .tabDesktop{
+        display: none;
+    }
+    .tabMobile{
+        display: block !important;
+    }
 }
