--- a/src/app/inventory/inventory.component.scss
+++ b/src/app/inventory/inventory.component.scss
@@ -129,11 +129,21 @@
         padding-top: 140px !important;
     }
 
+    .tabMobile{
+        display: none;
+    }
+
 }
 
 @media only screen and (max-width: 992px){
     .inventory-list{
         top : 170px !important;
+    }
+    .tabDesk{
+        display: none;
+    }
+    .tabMobile{
+        display: block;
     }
 }
 
